with_kustomize/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-deployment-ing
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: dev2.trunglv.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
